# luigi-db

./:   .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile.ubuntu22  MAKO_TPCC_BENCHMARK_GUIDE.md  Makefile  PAXOS_VS_RAFT_BATCHING_ANALYSIS.md  QUICKSTART.md  REACTOR_EVENT_FIX.md  README.md  TODO.md  WHY_SEPARATE_REACTOR_PATHS.md  add_virtual.py  apt_packages.sh  bench_result.txt  compile-makefile.sh  crossshard_luigi_final.txt  crossshard_luigi_output.txt  crossshard_mako_output.txt  curp-one-click.sh  curp_batch_op.sh  curp_results.csv  curp_test.py  debug_1shard_3replica.txt  dep.sh  docker_build.sh  install_rustc.sh  log_analysis.py  luigi_test_5pct.txt  mongod.conf  ms_res.txt  ms_result.txt  multi_shard_result.txt  requirements.txt  rerun_1shard_3replica_failed.sh  result.txt  results_processor.py  run_1shard_3replica_10s_suite.sh  (+22 more)
.github/workflows/: ci.yml  ubuntu-build.yml
bash/: run_crash.sh  shard.sh  shard_raft.sh  util.sh
ci/: ci.sh  ci_mako_raft.sh  clean.sh  test_comprehensive_throttling.sh  test_cpu_throttling_scaling.sh  test_high_thread_counts.sh
config/: 10c1s3r1p-zoo-docker.yml  10c1s3r1p.yml  10c1s5r10p.yml  12c1s3r1p.yml  12c1s5r1p.yml  15c1s5r1p.yml  1c1s1p.yml  1c1s3r1p.yml  1c1s3r1p_cluster_test.yml  1c1s3r3p.yml  1c1s3r3p_cluster_test.yml  1c1s5r1p_cluster_test.yml  20c1s3r1p.yml  2c1s3r1p.yml  30c1s5r10p.yml  30c1s5r1p.yml  30c1s5r5p.yml  3c1s3r1p.yml  3c1s3r3p-aws.yml  3c1s3r3p.yml  40c1s3r1p.yml  4c1s3r4p.yml  5c1s3r1p.yml  5c1s5r1p.yml  5c1s5r5p.yml  60c1s5r10p.yml  YCSB_A.yml  YCSB_B.yml  client_open.yml  client_open_10.yml  client_open_100.yml  client_open_1k.yml  client_open_2k.yml  client_open_3k.yml  client_open_4k.yml  client_open_5k.yml  client_open_99.yml  concurrent_11.yml  concurrent_13.yml  concurrent_17.yml  (+57 more)
config/1leader_2followers/: generator.py  raft2_shardidx0.yml  raft6_shardidx0.yml  raft6_shardidx1.yml
curp_scripts/: constants.tex  evaluation.ipynb  evaluation_ycsb.ipynb
curp_scripts/.ipynb_checkpoints/: constants-checkpoint.tex  evaluation-checkpoint.ipynb
doc/: FUNCTION_DEPENDENCY_ANALYSIS.md  RAFT_EXPLAINED.md  RUSTYCPP_MIGRATION_PLAN.md  TODO.md  coroutines_guide.md  cpu_limiting_plan.md  cpu_throttling.md  disk_persistence.md  leader_shutdown_hang.md  mako_raft_helper.md  quickstart.md  rrr-rpc.md
doc/MAKO_RAFT_PATCH_DOCS/: MAKO_ARCHITECTURE_ANALYSIS.md  MAKO_COMPLETE_ARCHITECTURE.md  MAKO_EXPLAINED.md  MAKO_RAFT_MIGRATION_PLAN.md  MIGRATION_STATUS_UPDATE.md  RAFT_MAIN_HELPER_IMPLEMENTATION.md
doc/masstree-rustycpp-migration/: README.md  masstree-rustycpp-migration-plan.md
docs/: RUSTYCPP_RAFT_MIGRATION.md  luigi_project_writeup.md
examples/: baselines.sh  continuousTransactions.cc  run_rocksdb_test.sh  simplePaxos.cc  simplePaxos.sh  simpleTransaction.cc  simpleTransactionRep.cc  testElectionStability.sh  test_1shard_replication.sh  test_1shard_replication_simple.sh  test_2shard_no_replication.sh  test_2shard_no_replication_simple.sh  test_2shard_replication.sh  test_2shard_replication_4proc.sh  test_2shard_replication_simple.sh  test_2shard_single_process.sh  test_2shard_single_process_replication.sh  test_callback_demo.cc  test_continuous_transactions.sh  test_cpu_scaling_2shard.sh  test_luigi_bench.sh  test_multi_shard_single_process.sh  test_ordered_callbacks.cc  test_partitioned_queues.cc  test_rocksdb_persistence.cc  test_stress_partitioned_queues.cc  test_verification.h
examples/mako-raft-tests/: run_test1_preferred_startup.sh  run_test_log_replication.sh  run_test_noops.sh  simpleRaft.cc  simpleRaft.sh  simpleTransactionRepRaft.cc  testBasicSetup.cc  testBasicSetup.sh  testElectionStability.cc  testElectionStability.sh  testFiveServers.cc  (+18 more)
ips/: ip_c1  ip_s1  ip_s2  ip_s3
mongodb_handler/: Makefile  main.cpp  mongodb_connection_thread_pool.h  mongodb_kv_table_handler.h
scripts/: add_latency.sh
src/: helloworld.cc  nc_main.cc
test/: bench_future.cc  benchmark_service.cc  benchmark_service.h  coroutine.cc  masstree_perf.cc  rpc_microbench.cc  rpcbench.cc  stress_transport_backend.cc  test_arc_mutex_thread.cc  test_erpc_integration.cc  test_future.cc  test_lambda.cc  test_marshal.cc  test_masstree.cc  test_masstree_internals.cc  test_masstree_multi_instance.cc  test_reactor.cc  test_reactor_extended.cc  test_reactor_minimal.cc  test_rpc.cc  test_rpc_extended.cc  test_silo_allocator_tuple.cc  test_silo_multi_site_stress.cc  test_silo_runtime.cc  test_silo_varint.cc  test_sto_transaction.cc  test_sto_transaction_real.cc  test_timeout_race.cc  test_timer.cc  test_tpca.cc  test_transport_backend.cc  test_transport_integration.cc
tests/: CMakeLists.txt  README.md  run_tests.sh
tests/silo/: bench_varint.cc  test_rcu_thread.cc
tests/sto/: bench_transaction.cc
(+863 files in other folders)
